# hermesbench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MTP_FEASIBILITY.md  README.md  REPOSITORY_MAP.md  SECURITY.md  modal_gradient_probe.py  modal_manual_mtp_probe.py  modal_mtp_export.py  modal_mtp_overfit.py  modal_sglang_bench.py  modal_train_sft.py  modal_vllm_bench.py  modal_vllm_capability.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
configs/: qwen36-hermes-v0-sft.yaml
data/: README.md
docs/: DEEPSEEK_V4_APPLICABILITY.md  HERMES_AGENT_SPECIALIZATION.md  MODAL_TRAINING_RUNBOOK.md  PREFERENCE_TUNING_NOTES.md  PROCESS_STATUS.md  anchor-set-policy.md  api.md  architecture.md  deployment-api.md  deployment-website.md  fresh-wave-playbook.md  launch-readiness-v0.1.md  methodology.md  official-runs.md  private-packs.md  provenance.md  release-process.md  task-format.md
legacy/: README.md
migrations/: 0001_submissions.sql
official_runs/: TEMPLATE.yaml
reports/: hermes-data-alignment.json  hermes-hf-openhands-swe-quality.json  hermes-hf-openthoughts-terminal-quality.json  hermes-hf-toolcall-sources-quality.json  hermes-v0-base-model-baseline.deferred.md  hermes-v0-base-model-baseline.openrouter-qwen36.md  hermes-v0-baseline-template.json  hermes-v0-eval.openrouter-qwen36-reasoning-high.json  hermes-v0-eval.openrouter-qwen36.json  hermes-v0-eval.stub.json  hermes-v0-predictions.openrouter-qwen36-reasoning-high.jsonl  hermes-v0-predictions.openrouter-qwen36.jsonl  hermes-v0-predictions.stub.jsonl  hermes-v0-train-quality.json  hf-agent-dataset-candidates.md  hf-agent-dataset-import-plan.md  hf-openhands-swe-usability.md  hf-qwen-taubench-hermes-usability.md  hf-terminal-agent-usability.md  local-guarded-gradient-probe.json  modal-gradient-probe.json  modal-manual-mtp-probe.json  modal-mtp-export-probe.json  modal-mtp-overfit-probe.json  modal-sglang-bench-attempt.json  (+7 more)
(+515 files in other folders)
