[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermesbench"
version = "0.1.0"
description = "Real-world benchmark harness for Hermes-style tool-using agents."
requires-python = ">=3.11"
dependencies = [
  "pyyaml",
]

[project.optional-dependencies]
ml = [
  "accelerate",
  "safetensors",
  "torch",
  "transformers>=5.0.0",
]
test = ["pytest", "pytest-xdist"]
dev = [
  "pytest",
  "pytest-xdist",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-xdist",
]
ml = [
  "accelerate",
  "safetensors",
  "torch",
  "transformers>=5.0.0",
]

[project.scripts]
hermesbench = "hermesbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermesbench"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-n auto"
